    you try to close the DOSBox-X window. If set to
    "auto" (default), DOSBox-X will warn only if at
    least one file handle is still open. (Wengier)
  - Add command-line option "-defaultdir" to specify
    a directory (instead of the current directory) as
    the working directory. DOSBox-X will look for the
    dosbox-x.conf file in this directory. (Wengier)
  - VER /R now shows DOSBox-X's Git commit SHA1, in
    addition to other version information. (Wengier)
  - Fixed that joystick may not work with the setting
    "usescancodes=auto" when a non-US keyboard layout
    is activated on the SDL1 build. (Wengier)
  - Fixed possible failure when mounting .VHD images,
    and the issue that leading : (read-only marker)
    may not work for such images. (Wengier)
  - Added option to the Windows installer which allows
    to automatically upgrade the DOSBox-X config file
    (dosbox-x.conf) to the latest version format while
    keeping the current user settings. Also added the
    option to add the context menu for executables and
    folders in the Windows Explorer. (Wengier)
  - The default value for "output" (in "sdl" section)
    is now "default", which will default to the value
    according to your platform. (Wengier)
  - MOUNT command's -Q (quiet) option now silences
    virtually all output of this command. (Wengier)
  - Worked around the mounting issue with LaunchBox,
    by allowing a mounting command-line with single
    quotes like MOUNT C 'X:\DOS' on Windows. (Wengier)
  - Unmounting ISO drives will auto-unmount associated
    El Torito floppy drives (if any) too. (Wengier)
  - Updated xxHash library by Yann Collet from 0.7.4
    to the stable version 0.8.0. (Wengier)
  - Added "Quick launch program..." menu (under "DOS")
    to quickly run the specified program as selected
    by the Windows file browser in DOSBox-X. (Wengier)
  - The save state feature now tries to save and then
    restore the mounted drives of all types (if the