@@ -1,4 +1,4 @@
 /*auto-generated*/
-#define UPDATED_STR "Aug 16, 2020 8:55:14pm"
-#define GIT_COMMIT_HASH "a66edff"
+#define UPDATED_STR "Aug 16, 2020 10:45:06pm"
+#define GIT_COMMIT_HASH "b1cd4c2"
 #define COPYRIGHT_END_YEAR "2020"
